--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,3 @@
-#user:
-#    path: /api
-#    defaults: { _controller: 'App\Controller\UserController::indexAction' }
-#
-#
-#api_login_check:
-#    path: /api/login_check
+#index:
+#    path: /
+#    controller: App\Controller\DefaultController::index
