--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,10 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "symfony/browser-kit": "4.2.*",
+        "symfony/css-selector": "4.2.*",
         "symfony/maker-bundle": "^1.11",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/var-dumper": "4.2.*",
         "symfony/web-server-bundle": "4.2.*"
     }
